--- a/frontend/login.html
+++ b/frontend/login.html
@@ -16,27 +16,29 @@
       <!-- ブランド部分 -->
       <a class="navbar-brand d-flex align-items-center" href="#">
         <span class="fs-5 fw-bold">Ishokansen Reservation</span>
-        <span class="ms-2 text-white-50" style="font-size: 0.9rem;">新幹線チケット予約</span>
+        <span class="ms-2 text-white-50" style="font-size: 0.9rem;" id="header-subtitle">新幹線チケット予約</span>
       </a>
-      <!-- ログイン前なのでユーザ名は非表示 -->
+      <div class="d-flex ms-auto align-items-center">
+        <button id="language-toggle" class="btn btn-outline-light btn-sm">EN</button>
+      </div>
     </div>
   </nav>
 
   <div class="container my-5">
     <div class="row justify-content-center">
       <div class="col-md-4">
-        <h2 class="mb-4 text-center">ログイン</h2>
+        <h2 class="mb-4 text-center" id="login-title">ログイン</h2>
         <div id="error-message" class="alert alert-danger d-none"></div>
         <form id="login-form">
           <div class="mb-3">
-            <label for="name" class="form-label">ユーザ名</label>
+            <label for="name" class="form-label" id="username-label">ユーザ名</label>
             <input type="text" class="form-control" id="name" required />
           </div>
           <div class="mb-3">
-            <label for="password" class="form-label">パスワード</label>
+            <label for="password" class="form-label" id="password-label">パスワード</label>
             <input type="password" class="form-control" id="password" required />
           </div>
-          <button type="submit" class="btn btn-primary w-100">ログイン</button>
+          <button type="submit" class="btn btn-primary w-100" id="login-button">ログイン</button>
         </form>
       </div>
     </div>
@@ -46,8 +48,64 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
+    // i18n translations
+    const translations = {
+      ja: {
+        pageTitle: "新幹線チケット予約",
+        loginTitle: "ログイン",
+        username: "ユーザ名",
+        password: "パスワード",
+        loginButton: "ログイン",
+        networkError: "ネットワークエラーが発生しました",
+        loginFailed: "ログインに失敗しました"
+      },
+      en: {
+        pageTitle: "Bullet Train Ticket Reservation",
+        loginTitle: "Login",
+        username: "Username",
+        password: "Password",
+        loginButton: "Login",
+        networkError: "A network error occurred",
+        loginFailed: "Login failed"
+      }
+    };
+
+    function getLanguageFromURL() {
+      const urlParams = new URLSearchParams(window.location.search);
+      const lang = urlParams.get('lang');
+      return (lang === 'en' || lang === 'ja') ? lang : 'ja';
+    }
+
+    let currentLang = getLanguageFromURL();
+
+    function t(key) {
+      const keys = key.split('.');
+      let value = translations[currentLang];
+      for (const k of keys) {
+        value = value?.[k];
+      }
+      return value || key;
+    }
+
+    function setLanguageInURL(lang) {
+      const url = new URL(window.location);
+      url.searchParams.set('lang', lang);
+      window.history.replaceState({}, '', url);
+    }
+
+    function updateUILanguage() {
+      document.title = t('loginTitle') + " - Ishokansen Reservation";
+      document.getElementById('header-subtitle').textContent = t('pageTitle');
+      document.getElementById('language-toggle').textContent = currentLang === 'ja' ? 'EN' : 'JP';
+      document.getElementById('login-title').textContent = t('loginTitle');
+      document.getElementById('username-label').textContent = t('username');
+      document.getElementById('password-label').textContent = t('password');
+      document.getElementById('login-button').textContent = t('loginButton');
+    }
+
     const loginForm = document.getElementById('login-form');
     const errorMessageDiv = document.getElementById('error-message');
+
     loginForm.addEventListener('submit', async (e) => {
       e.preventDefault();
       const name = document.getElementById('name').value;
@@ -62,25 +120,37 @@
 
       if (!res.ok) {
         // ネットワークエラーなど
-        errorMessageDiv.textContent = 'ネットワークエラーが発生しました';
+        errorMessageDiv.textContent = t('networkError');
         errorMessageDiv.classList.remove('d-none');
         return;
       }
 
       const data = await res.json();
       if (data.status === 'success') {
+        const lang = currentLang === 'ja' ? '' : '?lang=' + currentLang;
         if (data.user.is_admin) {
           // 管理者ページへ
-          location.href = '/admin.html';
+          location.href = '/admin.html' + lang;
         } else {
           // ユーザページへ
-          location.href = '/waiting.html';
+          location.href = '/waiting.html' + lang;
         }
       } else {
         // ログイン失敗
-        errorMessageDiv.textContent = data.error || 'ログインに失敗しました';
+        errorMessageDiv.textContent = data.error || t('loginFailed');
         errorMessageDiv.classList.remove('d-none');
       }
+    });
+
+    document.addEventListener('DOMContentLoaded', () => {
+      updateUILanguage();
+
+      const languageToggle = document.getElementById('language-toggle');
+      languageToggle?.addEventListener('click', () => {
+        currentLang = currentLang === 'ja' ? 'en' : 'ja';
+        setLanguageInURL(currentLang);
+        updateUILanguage();
+      });
     });
   </script>
 </body>
