[CONTEST][SCOREBOARD] Confetti

--- a/contest/scoreboard/index.html
+++ b/contest/scoreboard/index.html
@@ -51,6 +51,9 @@
   <div id="timeline-chart"></div>
   <div id="bar-chart"></div>
 
+  <!-- Confetti library -->
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
   <!-- Use module type for JavaScript files -->
   <script type="module" src="./dist/main.js"></script>
 </body>
