--- a/contest/scoreboard/index.html
+++ b/contest/scoreboard/index.html
@@ -31,6 +31,7 @@
         font-size: 14px;
         pointer-events: none;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        text-align: left;
     }
 
     .tick line {
