--- a/contest/scoreboard/index.html
+++ b/contest/scoreboard/index.html
@@ -7,9 +7,30 @@
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <style>
     body {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #f4f4f9;
+        font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         text-align: center;
+        margin: 0;
+        padding: 20px;
+        min-height: 100vh;
+    }
+
+    h1 {
+        color: #ffffff;
+        font-size: 48px;
+        font-weight: 700;
+        margin: 30px 0 40px 0;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        letter-spacing: -0.5px;
+    }
+
+    #timeline-chart, #bar-chart {
+        background: #ffffff;
+        border-radius: 16px;
+        padding: 30px;
+        margin: 30px auto;
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+        max-width: 90%;
     }
 
     svg {
@@ -24,25 +45,25 @@
 
     .tooltip-modern {
         position: absolute;
-        background-color: rgba(0, 0, 0, 0.7);
+        background-color: rgba(0, 0, 0, 0.85);
         color: #fff;
-        padding: 8px;
-        border-radius: 4px;
+        padding: 12px 16px;
+        border-radius: 8px;
         font-size: 14px;
         pointer-events: none;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
         text-align: left;
+        backdrop-filter: blur(10px);
+        line-height: 1.6;
     }
 
-    .tick line {
-        stroke: #ddd;
-        stroke-opacity: 0.3;
-    }
 
     h2 {
-        font-size: 24px;
-        color: #333;
-        margin-bottom: 20px;
+        font-size: 28px;
+        color: #1a1a1a;
+        margin-bottom: 25px;
+        font-weight: 600;
+        letter-spacing: -0.3px;
     }
   </style>
 </head>
