Rename event title

--- a/contest/scoreboard/index.html
+++ b/contest/scoreboard/index.html
@@ -68,7 +68,7 @@
   </style>
 </head>
 <body>
-  <h1>ISHOCON3 Scoreboard</h1>
+  <h1>KOSUCON 2025 Scoreboard</h1>
 
   <div id="timeline-chart"></div>
   <div id="bar-chart"></div>
